# antivmdetection

./: .gitignore  README.md  antivmdetect.py  antivmdetect_windows.py  platform.py  platform_helper.py  pyproject.toml  requirements.txt  setup.cfg
providers/: hardware.py  storage.py
src/antivmdetection/: __init__.py  cli.py  live_mode.py  model.py
src/antivmdetection/collectors/: linux_hw.py  snapshot.py  windows_hw.py
src/antivmdetection/generators/: guest.py  host.py
src/antivmdetection/util/: logging.py  random.py  subprocess.py
tests/: test_generators_windows.py  test_live_mode_helpers.py  test_random_util.py  test_snapshot.py
tests/fixtures/: sample_snapshot.json
